--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
         <div class="preloader-img pere-text">
-          <img src="assets/img/logo/s.png" alt="Loading">
+          <img src="./assets/img/logo/s.png" alt="Loading">
         </div>
       </div>
     </div>
