--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <nav>
                   <ul id="navigation">
                     <li class="active"><a href="index.html"> Home</a></li>
-                    <li><a href="docs.html">Docs</a></li>
+                    <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="__blank">Docs</a></li>
                     <li><a href="downloads.html">Downloads</a></li>
                     <li><a href="contact.html">Contact</a></li>
                   </ul>
