Completed Home Page Development

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <div class="preloader-inner position-relative">
         <div class="preloader-circle"></div>
         <div class="preloader-img pere-text">
-          <img src="./assets/img/logo/s.png" alt="Loading">
+          <!-- <img src="./assets/img/logo/s.png" alt="Loading"> -->
+          <h5>Loading</h5>
         </div>
       </div>
     </div>
@@ -45,7 +46,8 @@
 
             <div class="col-xl-2 col-lg-2 col-md-2">
               <div class="logo">
-                <a href="index.html"><img src="assets/img/logo/s.png" width="100px" alt=""></a>
+                <!-- <a href="index.html"><img src="assets/img/logo/s.pn" width="100px" alt=""></a> -->
+                <h2>Splasher</h2>
               </div>
             </div>
             <div class="col-xl-10 col-lg-10 col-md-10">
@@ -54,9 +56,9 @@
                 <nav>
                   <ul id="navigation">
                     <li class="active"><a href="index.html"> Home</a></li>
-                    <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="__blank">Docs</a></li>
-                    <li><a href="downloads.html">Downloads</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="_blank">Docs</a></li>
+                    <li><a href="downloads.html" target="_blank">Downloads</a></li>
+                    <li><a href="contact.html" target="_blank">Contact</a></li>
                   </ul>
                 </nav>
               </div>
@@ -122,7 +124,7 @@
 
                   <div class="slider-btns">
 
-                    <a data-animation="fadeInLeft" data-delay="1.0s" href="docs.html"
+                    <a data-animation="fadeInLeft" data-delay="1.0s" href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="_blank"
                       class="btn radius-btn">Docs</a>
 
                     <!-- <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video video-btn ani-btn"
@@ -165,9 +167,9 @@
                 <span class="flaticon-businessman"></span>
               </div>
               <div class="service-cap">
-                <h4><a href="#">Design</a></h4>
+                <h4><a href="https://photopea.com" target="_blank">Design</a></h4>
                 <p>
-                  Design your logo. the resolution should be 1080 by 2160 pixels.
+                  Design your logo. the resolution should be 1080 by 2160 pixels and format should be png.
 
                 </p>
               </div>
@@ -179,7 +181,7 @@
                 <span class="flaticon-pay"></span>
               </div>
               <div class="service-cap">
-                <h4><a href="#">Create</a></h4>
+                <h4><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="_blank">Create</a></h4>
                 <p>Select your custom png logo file and click on Create Splash button</p>
               </div>
             </div>
@@ -190,7 +192,7 @@
                 <span class="flaticon-plane"></span>
               </div>
               <div class="service-cap">
-                <h4><a href="#">Flash</a></h4>
+                <h4><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="_blank">Flash</a></h4>
                 <p>After you have done the two steps now you can Flash.</p>
               </div>
             </div>
@@ -210,12 +212,12 @@
               <div class="single-footer-caption mb-30">
 
                 <div class="footer-logo">
-                  <a style="color: black; text-decoration: none;" href="index.html"><h3>Dexcorp Softwares Limited</h3></a>
+                  <a style="color: black; text-decoration: none;" href="https://facebook.com/dexcorpsoftwareslimited" target="_blank"><h3>Dexcorp Softwares Limited</h3></a>
                 </div>
                 <div class="footer-tittle">
                   <div class="footer-pera">
                     <p class="info1">
-                      Any kind of help regarding the software you can contact us. we provide 24/7 support. we have the best web developers and native app developers in the world. 
+                      Any kind of help regarding the software development you can contact us. we provide 24/7 support. we have the best web developers and native app developers in the world. 
                     </p>
                   </div>
                 </div>
@@ -226,10 +228,10 @@
                 <div class="footer-tittle">
                   <h4>Quick Links</h4>
                   <ul>
-                    <li><a href="docs.html">Docs</a></li>
-                    <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher">Github</a></li>
-                    <li><a href="https://github.com/mahfuz0712">Developer</a></li>
-                    <li><a href="downloads.html">Downloads</a></li>
+                    <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="_blank">Docs</a></li>
+                    <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher" target="_blank">Github</a></li>
+                    <li><a href="https://github.com/mahfuz0712" target="_blank">Developer</a></li>
+                    <li><a href="downloads.html" target="_blank">Downloads</a></li>
                   </ul>
                 </div>
               </div>
