Updated Downloads Page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                   <div class="slider-btns">
 
-                    <a download data-animation="fadeInLeft" data-delay="1.0s" href="https://github.com/dexcorpsoftwareslimited/Splasher/releases/download/v1.0.0/setup.exe"
+                    <a data-animation="fadeInLeft" data-delay="1.0s" href="https://github.com/dexcorpsoftwareslimited/Splasher/releases/download/v1.0.0/setup.exe"
                       class="btn radius-btn">Download
                     </a>
 
