--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/s.png" alt="">
+                    <!-- <img src="assets/img/logo/s.png" alt=""> -->
+                    <h5>Loading</h5>
                 </div>
             </div>
         </div>
@@ -46,7 +47,8 @@
 
                         <div class="col-xl-2 col-lg-2 col-md-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <!-- <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a> -->
+                                <h2>Splasher</h2>
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10 col-md-10">
@@ -55,8 +57,8 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="index.html"> Home</a></li>
-                                        <li><a href="docs.html">Docs</a></li>
-                                        <li><a href="downloads.html">Downloads</a></li>
+                                        <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="_blank">Docs</a></li>
+                                        <li><a href="downloads.html" target="_blank">Downloads</a></li>
                                         <li class="active"><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -620,12 +622,12 @@
                   <div class="single-footer-caption mb-30">
     
                     <div class="footer-logo">
-                      <a style="color: black; text-decoration: none;" href="index.html"><h3>Dexcorp Softwares Limited</h3></a>
+                      <a style="color: black; text-decoration: none;" href="https://facebook.com/dexcorpsoftwareslimited" target="_blank"><h3>Dexcorp Softwares Limited</h3></a>
                     </div>
                     <div class="footer-tittle">
                       <div class="footer-pera">
                         <p class="info1">
-                          Any kind of help regarding the software you can contact us. we provide 24/7 support. we have the best web developers and native app developers in the world. 
+                          Any kind of help regarding the software development you can contact us. we provide 24/7 support. we have the best web developers and native app developers in the world. 
                         </p>
                       </div>
                     </div>
@@ -636,10 +638,10 @@
                     <div class="footer-tittle">
                       <h4>Quick Links</h4>
                       <ul>
-                        <li><a href="docs.html">Docs</a></li>
-                        <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher">Github</a></li>
-                        <li><a href="https://github.com/mahfuz0712">Developer</a></li>
-                        <li><a href="downloads.html">Downloads</a></li>
+                        <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="_blank">Docs</a></li>
+                        <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher" target="_blank">Github</a></li>
+                        <li><a href="https://github.com/mahfuz0712" target="_blank">Developer</a></li>
+                        <li><a href="downloads.html" target="_blank">Downloads</a></li>
                       </ul>
                     </div>
                   </div>
