Completed The Whole Webseite

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="site.webmanifest">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/S.png">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -58,7 +58,7 @@
                     <li class="active"><a href="index.html"> Home</a></li>
                     <li><a href="https://github.com/dexcorpsoftwareslimited/Splasher/blob/main/README.md" target="_blank">Docs</a></li>
                     <li><a href="downloads.html" target="_blank">Downloads</a></li>
-                    <li><a href="contact.html" target="_blank">Contact</a></li>
+                    <!-- <li><a href="contact.html" target="_blank">Contact</a></li> -->
                   </ul>
                 </nav>
               </div>
